--- a/templates/edit.html
+++ b/templates/edit.html
@@ -47,6 +47,16 @@
                     <p class="thin">Write a descriptive caption of this image in particular. Refer to <a href="https://developers.google.com/tech-writing/accessibility/self-study/write-alt-text#write-useful-text">this article</a> on writing good alt text.</p>
                     <input value="{{ muralDetails['images'][loop.index-1]['alttext'] }}" type="text" class="form-control" id="alttext" name="alttext">
                 </div>
+                <div class="mb-3">
+                    <label for="attribution" class="form-label">Attribution</label>
+                    <p class="thin">The first and last name of the photographer.</p>
+                    <input value="{{ muralDetails['images'][loop.index-1]['attribution'] }}" type="text" class="form-control" id="attribution" name="attribution">
+                </div>
+                <div class="mb-3">
+                    <h6>Date Created</h6>
+                    <p class="thin">The date the photo was taken</p>
+                    <p>{{ muralDetails['images'][loop.index-1]['datecreated'] }}</p>
+                </div>
                 <button type="submit" class="btn btn-primary">Edit Details</button>
                 </form>
             <form action="/deleteimage/{{ muralDetails['images'][loop.index-1]['id'] }}" method="post">
@@ -78,15 +88,26 @@
             <h1>Preview:</h1>
             <div class="card col-lg-6 text-center">
               
+              
+
               <div>
-                  <a style="text-decoration: none;" href="/murals/{{ muralDetails['id'] }}">
-                  <img class="card-img-top" src="{{ muralDetails['thumbnail'] }}">
-                  <div class="card-body">
-                      <p>{{ muralDetails['title'] }}</p>
-                      <p>({% if muralDetails["year"] != 0 %}{{ muralDetails["year"] }}{% else %}Unknown{% endif %})</p>
-                  </div>
-              </a>
-              </div>
+                <a style="text-decoration: none; color:inherit" href="/murals/{{ muralDetails['id'] }}">
+                <img class="card-img-top" src="{{ muralDetails['thumbnail'] }}">
+                    {% if muralDetails['tags']|length > 0 %}
+                    <div class="card-body">
+                    <p style="margin-bottom: 2px;">{{ muralDetails['title'] }}</p>
+                    <p style="margin-bottom: 4px">({% if muralDetails["year"] != 0 %}{{ muralDetails["year"] }}{% else %}Unknown{% endif %})</p>
+                    {% for tag in muralDetails['tags'] %}
+                    <p style="margin-bottom: 2px" class="chip small">{{ tag }}</p>
+                    {% endfor %}
+                    {% else %}
+                    <div class="card-body">
+                    <p style="margin-bottom: 4px">{{ muralDetails['title'] }}</p>
+                    <p>({% if muralDetails["year"] != 0 %}{{ muralDetails["year"] }}{% else %}Unknown{% endif %})</p>
+                    {% endif %}
+                </div>
+                </div>
+            </a>
               </div>
               <h1>General Information</h1>
               <form action="/editmural/{{ muralDetails['id'] }}" method="post">
@@ -104,7 +125,6 @@
                   <option {{ 'selected' if a.id in muralDetails['artists']|map(attribute='id') else '' }} value="{{ a.id }}">{{ a.name }}</option>
                   {% endfor %}
                 </select>
-                {{ muralDetails['artists'] }}
                 <div class="mb-3">
                     <label for="active" class="form-label">Active</label>
                     <input {{ muralDetails['active'] }} type="checkbox" id="active" name="active">
@@ -142,14 +162,6 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Edit Details</button>
               </form>
-              {% if muralDetails["artists"]|length > 0: %}
-              <h3>Artists:</h3>
-              <ul>
-              {% for artist in muralDetails["artists"]: %}
-              <li><a href="/artist/{{ artist['id'] }}">{{artist["name"]}}</a></li>
-              {% endfor %}
-              </ul>
-              {% endif %}
 
               {% if muralFeedback|length > 0 %}
               <h1>Feedback:</h1>
