Add tag descriptions to filter pages, fix bug where remarks field shows without remarks

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -53,8 +53,7 @@
                     <input value="{{ muralDetails['images'][loop.index-1]['attribution'] }}" type="text" class="form-control" id="attribution" name="attribution">
                 </div>
                 <div class="mb-3">
-                    <h6>Date Created</h6>
-                    <p class="thin">The date the photo was taken</p>
+                    <h6>Date Taken</h6>
                     <p>{{ muralDetails['images'][loop.index-1]['datecreated'] }}</p>
                 </div>
                 <button type="submit" class="btn btn-primary">Edit Details</button>
