--- a/templates/mural.html
+++ b/templates/mural.html
@@ -110,7 +110,7 @@
             </ul>
             {% endif %}
             
-            {% if muralDetails["remarks"] != None %}
+            {% if muralDetails["remarks"] != '' %}
             <div class="accordion" id="remarkdropdown">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="remarkheading" title="Remarks can provide additional information about a piece, including details sourced from suggestions, conversations, and other casual sources.">
