Updated 404 logic and page, added nextmuralid edit fields

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,10 @@
 {% extends "header.html" %}
 {% block dynamic_content %}
 
-<p>404</p>
+<center>
+    <h2>Error 404</h2>
+    <p>You must be lost!</p>
+    <p><a href="/">Go home?</a></p>
+</center>
 
 {% endblock %}
