Adjust styling for next/prev mural buttons

--- a/templates/mural.html
+++ b/templates/mural.html
@@ -155,14 +155,13 @@ View Full Size Image</a>{% endif %}</pre>
                     </div>
                 </div>
             </div>
-        <div class="row">
-            <div class="col-7">
+        <div class="row text-center">
+            <div class="col-6">
                 {% if muralDetails['prevmuralid'] != None: %}
                 <a class="btn btn-primary" role="button" href="{{ muralDetails['prevmuralid'] }}">Prev</a>
                 {% endif %}
             </div>
-            <div class="col-5">
-
+            <div class="col-6">
                 {% if muralDetails['nextmuralid'] != None: %}
                 <a class="btn btn-primary" role="button" href="{{ muralDetails['nextmuralid'] }}">Next</a>
                 {% endif %}
