--- a/templates/header.html
+++ b/templates/header.html
@@ -31,6 +31,8 @@
 <html>
     <head>
         <title>{% block title %}TunnelVision{% endblock %}</title>
+        {% block metadata %}
+        {% endblock %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
         <meta property="og:title" content="TunnelVision" />
