--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -14,6 +14,7 @@ Catalog - TunnelVision
 <meta name="twitter:description" value="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
 <meta name="twitter:image" content="{{ url_for('static', filename='images/favicon.png') }}" />
 <meta name="twitter:url" value="https://tunnelvision.csh.rit.edu/catalog" />
+<meta name="description" value="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
 {% endblock %}
 {% block dynamic_content %}
 
