--- a/templates/mural.html
+++ b/templates/mural.html
@@ -18,6 +18,7 @@
 <meta name="twitter:data1" value="{{ muralDetails['year'] }}" />
 <meta name="twitter:label2" value="Location" />
 <meta name="twitter:data2" value="{{ muralDetails['location'] }}" />
+<meta name="description" value="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
 {% endblock %}
 {% block dynamic_content %}
 
